Generate rainfall-driven rivers and spill lakes over complete continents